; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/hid_liber/extr_matrix.c_pull_column.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/hid_liber/extr_matrix.c_pull_column.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@col_bit = common dso_local global i32* null, align 8
@PORTB = common dso_local global i32 0, align 4
@mask = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @pull_column to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pull_column(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32*, i32** @col_bit, align 8
  %4 = load i32, i32* %2, align 4
  %5 = sext i32 %4 to i64
  %6 = getelementptr inbounds i32, i32* %3, i64 %5
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* @PORTB, align 4
  %9 = load i32, i32* @mask, align 4
  %10 = xor i32 %9, -1
  %11 = and i32 %8, %10
  %12 = or i32 %7, %11
  store i32 %12, i32* @PORTB, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
